Add examples with Java 12 switch enhancements